[package]
name = "http-pdf-imager"
description = "An HTTP microservice for converting PDF files to images"
version = "1.1.2"
authors = ["Christoffer Lindahl Hassel"]
edition = "2021"
license = "MIT"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
femme = "2.2.1"
image = { version = "0.25.1", default-features = false, features = ["gif", "png", "jpeg", "webp"] }
pdfium-render = "0.8.22"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
tempfile = "3.10.1"
tide = { version = "0.16.0", default-features = false, features = ["h1-server"] }
zip = { version = "2.1.3", default-features = false, features = ["deflate"] }
